--- a/public/index.html
+++ b/public/index.html
@@ -11,30 +11,30 @@
 		<div id="page">
 			<div id="header">
 				<div id="logo">
-					<a href="index.html"><img src="images/logo.png" alt="LOGO" height="100" width="200"></a>
+					<a href="/"><img src="images/logo.png" alt="LOGO" height="100" width="200"></a>
 				</div>
 				<div id="navigation">
 					<ul>
 						<li class="selected">
-							<a href="index.html">Home</a>
+							<a href="/">Home</a>
 						</li>
 						<li>
-							<a href="travel.html">Travel</a>
+							<a href="/travel">Travel</a>
 						</li>
 						<li>
-							<a href="rooms.html">Rooms</a>
+							<a href="/rooms">Rooms</a>
 						</li>
 						<li>
-							<a href="meals.html">Meals</a>
+							<a href="/meals">Meals</a>
 						</li>
 						<li>
-							<a href="news.html">News</a>
+							<a href="/news">News</a>
 						</li>
 						<li>
-							<a href="about.html">About</a>
+							<a href="/about">About</a>
 						</li>
 						<li>
-							<a href="contact.html">Contact</a>
+							<a href="/contact">Contact</a>
 						</li>
 					</ul>
 				</div>
@@ -54,14 +54,14 @@
 								<h3>Latest Blog</h3>
 								<ul>
 									<li>
-										<h4><a href="news.html">2023 Best Beaches Contest Winners</a></h4>
+										<h4><a href="/news">2023 Best Beaches Contest Winners</a></h4>
 										<span>April 02, 2023</span>
 										<p>
 											Integer magna leo, posuere et dignissim vitae, porttitor at odio. Pellentesque a metus nec magna placerat volutpat. Nunc nisi mi, elementum sit amet...
 										</p>
 									</li>
 									<li>
-										<h4><a href="news.html">Top 10 Diving Spots</a></h4>
+										<h4><a href="/news">Top 10 Diving Spots</a></h4>
 										<span>May 29, 2023</span>
 										<p>
 											Maecenas scelerisque odio quis arcu fringilla malesuada. Nulla facilisi. In libero nulla, fermentum ut pretium ac, pharetra et eros...
@@ -76,7 +76,7 @@
 							<div>
 								<h3>Testimonials</h3>
 								<p>
-									“In hac habitasse platea dictumst. Integer purus justo, egestas eu consectetur eu, cursus in tortor. Quisque nec nunc ac mi ultrices iaculis. Aenean quis elit mauris, nec vestibulum lorem.” <span>- <a href="index.html">Juan De La Cruz</a></span>
+									“In hac habitasse platea dictumst. Integer purus justo, egestas eu consectetur eu, cursus in tortor. Quisque nec nunc ac mi ultrices iaculis. Aenean quis elit mauris, nec vestibulum lorem.” <span>- <a href="/">Juan De La Cruz</a></span>
 								</p>
 							</div>
 						</div>
@@ -84,7 +84,7 @@
 				</div>
 				<div id="sidebar">
 					<div class="section">
-						<a href="rooms.html"><img src="images/rooms.png" alt="Img"></a>
+						<a href="/rooms"><img src="images/rooms.png" alt="Img"></a>
 					</div>
 					<div class="section">
 						<a href="dives.html"><img src="images/dive-site.png" alt="Img"></a>
@@ -99,25 +99,25 @@
 			<div>
 				<ul class="navigation">
 					<li class="active">
-						<a href="index.html">Home</a>
+						<a href="/">Home</a>
 					</li>
 					<li>
-						<a href="travel.html">Travel</a>
+						<a href="/travel">Travel</a>
 					</li>
 					<li>
-						<a href="rooms.html">Rooms</a>
+						<a href="/rooms">Rooms</a>
 					</li>
 					<li>
-						<a href="meals.html">Meals</a>
+						<a href="/meals">Meals</a>
 					</li>
 					<li>
-						<a href="news.html">News</a>
+						<a href="/news">News</a>
 					</li>
 					<li>
-						<a href="about.html">About</a>
+						<a href="/about">About</a>
 					</li>
 					<li>
-						<a href="contact.html">Contact</a>
+						<a href="/contact">Contact</a>
 					</li>
 				</ul>
 				<div id="connect">
