--- a/public/meals.html
+++ b/public/meals.html
@@ -11,30 +11,30 @@
 		<div id="page">
 			<div id="header">
 				<div id="logo">
-					<a href="index.html"><img src="images/logo.png" alt="LOGO" height="100" width="200"></a>
+					<a href="/"><img src="images/logo.png" alt="LOGO" height="100" width="200"></a>
 				</div>
 				<div id="navigation">
 					<ul>
 						<li>
-							<a href="index.html">Home</a>
+							<a href="/">Home</a>
 						</li>
 						<li>
-							<a href="travel.html">Travel</a>
+							<a href="/travel">Travel</a>
 						</li>
 						<li>
-							<a href="rooms.html">Rooms</a>
+							<a href="/rooms">Rooms</a>
 						</li>
 						<li class="selected">
-							<a href="meals.html">Meals</a>
+							<a href="/meals">Meals</a>
 						</li>
 						<li>
-							<a href="news.html">News</a>
+							<a href="/news">News</a>
 						</li>
 						<li>
-							<a href="about.html">About</a>
+							<a href="/about">About</a>
 						</li>
 						<li>
-							<a href="contact.html">Contact</a>
+							<a href="/contact">Contact</a>
 						</li>
 					</ul>
 				</div>
@@ -46,27 +46,27 @@
 							<h1>Meals</h1>
 							<ul id="foods">
 								<li>
-									<h2><a href="meals.html">SeaFood Special</a></h2>
+									<h2><a href="/meals">SeaFood Special</a></h2>
 									<div class="infos">
-										<a href="meals.html"><img src="images/seafoods.jpg" alt="Img" height="169" width="780"><span class="cover"></span></a>
+										<a href="/meals"><img src="images/seafoods.jpg" alt="Img" height="169" width="780"><span class="cover"></span></a>
 										<p>
 											<span>Fried Salmon Special</span> I'm a product overview. Here you can write more information about your product. Buyers like to know ...
 										</p>
 									</div>
 								</li>
 								<li>
-									<h2><a href="meals.html">Sumptuous Desserts</a></h2>
+									<h2><a href="/meals">Sumptuous Desserts</a></h2>
 									<div class="infos">
-										<a href="meals.html"><img src="images/desserts.jpg" alt="Img" height="169" width="780"><span class="cover"></span></a>
+										<a href="/meals"><img src="images/desserts.jpg" alt="Img" height="169" width="780"><span class="cover"></span></a>
 										<p>
 											<span>Choco Ice Cream Sandwich</span> I'm a product overview. Here you can write more information about your product. Buyers like to know ...
 										</p>
 									</div>
 								</li>
 								<li>
-									<h2><a href="meals.html">Buffet</a></h2>
+									<h2><a href="/meals">Buffet</a></h2>
 									<div class="infos">
-										<a href="meals.html"><img src="images/buffet.jpg" alt="Img" height="169" width="780"><span class="cover"></span></a>
+										<a href="/meals"><img src="images/buffet.jpg" alt="Img" height="169" width="780"><span class="cover"></span></a>
 										<p>
 											<span>Mixed Buffet</span> I'm a product overview. Here you can write more information about your product. Buyers like to know ...
 										</p>
@@ -82,25 +82,25 @@
 			<div>
 				<ul class="navigation">
 					<li>
-						<a href="index.html">Home</a>
+						<a href="/">Home</a>
 					</li>
 					<li>
-						<a href="travel.html">Travel</a>
+						<a href="/travel">Travel</a>
 					</li>
 					<li>
-						<a href="rooms.html">Rooms</a>
+						<a href="/rooms">Rooms</a>
 					</li>
 					<li class="active">
-						<a href="meals.html">Meals</a>
+						<a href="/meals">Meals</a>
 					</li>
 					<li>
-						<a href="news.html">News</a>
+						<a href="/news">News</a>
 					</li>
 					<li>
-						<a href="about.html">About</a>
+						<a href="/about">About</a>
 					</li>
 					<li>
-						<a href="contact.html">Contact</a>
+						<a href="/contact">Contact</a>
 					</li>
 				</ul>
 				<div id="connect">
