--- a/public/news.html
+++ b/public/news.html
@@ -11,30 +11,30 @@
 		<div id="page">
 			<div id="header">
 				<div id="logo">
-					<a href="index.html"><img src="images/logo.png" alt="LOGO" height="100" width="200"></a>
+					<a href="/"><img src="images/logo.png" alt="LOGO" height="100" width="200"></a>
 				</div>
 				<div id="navigation">
 					<ul>
 						<li>
-							<a href="index.html">Home</a>
+							<a href="/">Home</a>
 						</li>
 						<li>
-							<a href="travel.html">Travel</a>
+							<a href="/travel">Travel</a>
 						</li>
 						<li>
-							<a href="rooms.html">Rooms</a>
+							<a href="/rooms">Rooms</a>
 						</li>
 						<li>
-							<a href="meals.html">Meals</a>
+							<a href="/meals">Meals</a>
 						</li>
 						<li class="selected">
-							<a href="news.html">News</a>
+							<a href="/news">News</a>
 						</li>
 						<li>
-							<a href="about.html">About</a>
+							<a href="/about">About</a>
 						</li>
 						<li>
-							<a href="contact.html">Contact</a>
+							<a href="/contact">Contact</a>
 						</li>
 					</ul>
 				</div>
@@ -47,37 +47,37 @@
 								<h3>Latest News</h3>
 								<ul>
 									<li>
-										<a href="news.html">2023 Best Beaches Contest Winners</a>
+										<a href="/news">2023 Best Beaches Contest Winners</a>
 									</li>
 									<li>
-										<a href="news.html">Top 10 Diving Spots</a>
+										<a href="/news">Top 10 Diving Spots</a>
 									</li>
 									<li>
-										<a href="news.html">Fishing ban to be implemented this year</a>
+										<a href="/news">Fishing ban to be implemented this year</a>
 									</li>
 									<li>
-										<a href="news.html">Lifeguard saves child from drowning</a>
+										<a href="/news">Lifeguard saves child from drowning</a>
 									</li>
 								</ul>
 								<h3>Vaction Tips</h3>
 								<ul>
 									<li>
-										<a href="news.html">What to bring on the beach?</a>
+										<a href="/news">What to bring on the beach?</a>
 									</li>
 									<li>
-										<a href="news.html">Planning Fun Activities</a>
+										<a href="/news">Planning Fun Activities</a>
 									</li>
 									<li>
-										<a href="news.html">Diving Checklist</a>
+										<a href="/news">Diving Checklist</a>
 									</li>
 									<li>
-										<a href="news.html">First Aid</a>
+										<a href="/news">First Aid</a>
 									</li>
 									<li>
-										<a href="news.html">How to Build a Sand Castle?</a>
+										<a href="/news">How to Build a Sand Castle?</a>
 									</li>
 									<li>
-										<a href="news.html">Tanning Tips</a>
+										<a href="/news">Tanning Tips</a>
 									</li>
 								</ul>
 							</div>
@@ -105,25 +105,25 @@
 			<div>
 				<ul class="navigation">
 					<li>
-						<a href="index.html">Home</a>
+						<a href="/">Home</a>
 					</li>
 					<li>
-						<a href="travel.html">Travel</a>
+						<a href="/travel">Travel</a>
 					</li>
 					<li>
-						<a href="rooms.html">Rooms</a>
+						<a href="/rooms">Rooms</a>
 					</li>
 					<li>
-						<a href="meals.html">Meals</a>
+						<a href="/meals">Meals</a>
 					</li>
 					<li class="active">
-						<a href="news.html">News</a>
+						<a href="/news">News</a>
 					</li>
 					<li>
-						<a href="about.html">About</a>
+						<a href="/about">About</a>
 					</li>
 					<li>
-						<a href="contact.html">Contact</a>
+						<a href="/contact">Contact</a>
 					</li>
 				</ul>
 				<div id="connect">
