--- a/public/rooms.html
+++ b/public/rooms.html
@@ -11,30 +11,30 @@
 		<div id="page">
 			<div id="header">
 				<div id="logo">
-					<a href="index.html"><img src="images/logo.png" alt="LOGO" height="100" width="200"></a>
+					<a href="/"><img src="images/logo.png" alt="LOGO" height="100" width="200"></a>
 				</div>
 				<div id="navigation">
 					<ul>
 						<li>
-							<a href="index.html">Home</a>
+							<a href="/">Home</a>
 						</li>
 						<li>
-							<a href="travel.html">Travel</a>
+							<a href="/travel">Travel</a>
 						</li>
 						<li class="selected">
-							<a href="rooms.html">Rooms</a>
+							<a href="/rooms">Rooms</a>
 						</li>
 						<li>
-							<a href="meals.html">Meals</a>
+							<a href="/meals">Meals</a>
 						</li>
 						<li>
-							<a href="news.html">News</a>
+							<a href="/news">News</a>
 						</li>
 						<li>
-							<a href="about.html">About</a>
+							<a href="/about">About</a>
 						</li>
 						<li>
-							<a href="contact.html">Contact</a>
+							<a href="/contact">Contact</a>
 						</li>
 					</ul>
 				</div>
@@ -46,24 +46,24 @@
 							<h1>Rooms</h1>
 							<ul id="rooms">
 								<li>
-									<a href="rooms.html"><img src="images/first-class.jpg" alt="Img"></a>
-									<h2><a href="rooms.html">First Class Room</a></h2>
+									<a href="/rooms"><img src="images/first-class.jpg" alt="Img"></a>
+									<h2><a href="/rooms">First Class Room</a></h2>
 									<p>
 										Cras dui sapien, feugiat vitae tristique ut, lobortis tempor orci. Donec pulvinar sagittis metus ut tristique. Pellentes que habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas idios.
 									</p>
 									<span class="rate">Rate: 220 / Day</span>
 								</li>
 								<li>
-									<a href="rooms.html"><img src="images/deluxe.jpg" alt="Img"></a>
-									<h2><a href="rooms.html">Deluxe Room</a></h2>
+									<a href="/rooms"><img src="images/deluxe.jpg" alt="Img"></a>
+									<h2><a href="/rooms">Deluxe Room</a></h2>
 									<p>
 										Sed et augue lorem. In sit amet placerat arcu. Mauris volutpat ipsum ac justo mollis vel vestibulum orci gravida. Vestibulum sit amet porttitor odio. Nulla facilisi. Fusce at pretium felis.
 									</p>
 									<span class="rate">Rate: 150 / Day</span>
 								</li>
 								<li>
-									<a href="rooms.html"><img src="images/suite.jpg" alt="Img"></a>
-									<h2><a href="rooms.html">Suite Room</a></h2>
+									<a href="/rooms"><img src="images/suite.jpg" alt="Img"></a>
+									<h2><a href="/rooms">Suite Room</a></h2>
 									<p>
 										Sed et augue lorem. In sit amet placerat arcu. Mauris volutpat ipsum ac justo mollis vel vestibulum orci gravida. Vestibulum sit amet porttitor odio. Nulla facilisi. Fusce at pretium felis.
 									</p>
@@ -79,25 +79,25 @@
 			<div>
 				<ul class="navigation">
 					<li>
-						<a href="index.html">Home</a>
+						<a href="/">Home</a>
 					</li>
 					<li>
-						<a href="travel.html">Travele</a>
+						<a href="/travel">Travele</a>
 					</li>
 					<li class="active">
-						<a href="rooms.html">Rooms</a>
+						<a href="/rooms">Rooms</a>
 					</li>
 					<li>
-						<a href="meals.html">Meals</a>
+						<a href="/meals">Meals</a>
 					</li>
 					<li>
-						<a href="news.html">News</a>
+						<a href="/news">News</a>
 					</li>
 					<li>
-						<a href="about.html">About</a>
+						<a href="/about">About</a>
 					</li>
 					<li>
-						<a href="contact.html">Contact</a>
+						<a href="/contact">Contact</a>
 					</li>
 				</ul>
 				<div id="connect">
