--- a/public/travel.html
+++ b/public/travel.html
@@ -11,30 +11,30 @@
 		<div id="page">
 			<div id="header">
 				<div id="logo">
-					<a href="index.html"><img src="images/logo.png" alt="LOGO" height="100" width="200"></a>
+					<a href="/"><img src="images/logo.png" alt="LOGO" height="100" width="200"></a>
 				</div>
 				<div id="navigation">
 					<ul>
 						<li>
-							<a href="index.html">Home</a>
+							<a href="/">Home</a>
 						</li>
 						<li class="selected">
-							<a href="travel.html">Travel</a>
+							<a href="/travel">Travel</a>
 						</li>
 						<li>
-							<a href="rooms.html">Rooms</a>
+							<a href="/rooms">Rooms</a>
 						</li>
 						<li>
-							<a href="meals.html">Meals</a>
+							<a href="/meals">Meals</a>
 						</li>
 						<li>
-							<a href="news.html">News</a>
+							<a href="/news">News</a>
 						</li>
 						<li>
-							<a href="about.html">About</a>
+							<a href="/about">About</a>
 						</li>
 						<li>
-							<a href="contact.html">Contact</a>
+							<a href="/contact">Contact</a>
 						</li>
 					</ul>
 				</div>
@@ -46,8 +46,8 @@
 							<h1>Travel</h1>
 							<ul id="sites">
 								<li>
-									<a href=“travel.html"><img src="images/reef1.jpg" alt="Img"></a>
-									<h2><a href=“travel.html">Gale Reef</a></h2>
+									<a href=“/travel"><img src="images/reef1.jpg" alt="Img"></a>
+									<h2><a href=“/travel">Gale Reef</a></h2>
 									<p>
 										Sed et augue lorem. In sit amet placerat arcu. Mauris volutpat ipsum ac justo mollis vel vestibulum orci gravida. Vestibulum sit amet porttitor odio. Nulla facilisi. Fusce at pretium felis.
 									</p>
@@ -56,8 +56,8 @@
 									</p>
 								</li>
 								<li>
-									<a href=“travel.html"><img src="images/reef2.jpg" alt="Img"></a>
-									<h2><a href=“travel.html">Dawson’s Reef</a></h2>
+									<a href=“/travel"><img src="images/reef2.jpg" alt="Img"></a>
+									<h2><a href=“/travel">Dawson’s Reef</a></h2>
 									<p>
 										Integer magna leo, posuere et dignissim vitae, porttitor at odio. Pellentesque a metus nec magna placerat volutpat. Nunc nisi mi, elementum sit amet aliquet quis, tristique quis nisl. Curabitur odio lacus, blandit ut hendrerit
 									</p>
@@ -66,8 +66,8 @@
 									</p>
 								</li>
 								<li>
-									<a href=“travel.html"><img src="images/reef3.jpg" alt="Img"></a>
-									<h2><a href=“travel.html">Claire’s REEF</a></h2>
+									<a href=“/travel"><img src="images/reef3.jpg" alt="Img"></a>
+									<h2><a href=“/travel">Claire’s REEF</a></h2>
 									<p>
 										Donec sed felis risus. Nulla facilisi. Donec a orci tellus, et auctor odio. Fusce ac orci nibh, quis semper arcu. Cras orci neque, euismod et accumsan ac, sagittis molestie lorem. Proin odio sapien, elementum at tempor non.
 									</p>
@@ -85,25 +85,25 @@
 			<div>
 				<ul class="navigation">
 					<li>
-						<a href="index.html">Home</a>
+						<a href="/">Home</a>
 					</li>
 					<li class="active">
-						<a href=“travel.html">Travel</a>
+						<a href=“/travel">Travel</a>
 					</li>
 					<li>
-						<a href="rooms.html">Rooms</a>
+						<a href="/rooms">Rooms</a>
 					</li>
 					<li>
-						<a href=“meals.html">Meals</a>
+						<a href=“/meals">Meals</a>
 					</li>
 					<li>
-						<a href="news.html">News</a>
+						<a href="/news">News</a>
 					</li>
 					<li>
-						<a href="about.html">About</a>
+						<a href="/about">About</a>
 					</li>
 					<li>
-						<a href="contact.html">Contact</a>
+						<a href="/contact">Contact</a>
 					</li>
 				</ul>
 				<div id="connect">
